build-agent.yaml
# build-agent.yaml
apiVersion: v1
kind: Pod
spec:
  containers:  
    - name: maven
      image: maven:3.6.3-jdk-8-slim
      command: ["tail", "-f", "/dev/null"]  
      imagePullPolicy: Always 
      resources:  
        requests:
          memory: "8Gi"
          cpu: "500m"
        limits:
          memory: "8Gi"
    - name: kubectl
      image: bitnami/kubectl 
      imagePullPolicy: Always 
    - name: dind
      image: docker:latest
      command: ["tail", "-f", "/dev/null"]
      imagePullPolicy: Always
      volumeMounts:
        - name: docker
          mountPath: /var/run/docker.sock
  volumes:
    - name: docker
      hostPath:
        path: /var/run/docker.sock
