intense.yaml
# intense.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: intense
spec:
  selector:
    matchLabels:
      run: intense
  replicas: 1
  template:
    metadata:
      labels:
        run: intense
    spec:
      containers:
      - name: intense
        image: eu.gcr.io/jenkins-004/intense
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
